--- a/package.json
+++ b/package.json
@@ -45,34 +45,35 @@
     "@types/chai-as-promised": "^7.1.7",
     "@types/chai-spies": "^1.0.5",
     "@types/figlet": "^1.5.7",
-    "@types/mocha": "^10.0.3",
-    "@types/node": "^20.8.10",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^20.19.26",
     "@types/sinon": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
     "chai-spies": "^1.1.0",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.53.0",
+    "eslint": "^9.39.2",
     "eslint-plugin-only-warn": "^1.1.0",
     "firebase-admin": "^11.11.0",
-    "mocha": "^10.2.0",
+    "husky": "^9.1.7",
+    "mocha": "^11.7.5",
     "mocha-junit-reporter": "^2.2.1",
     "nodemon": "^3.0.1",
     "nyc": "^15.1.0",
     "rimraf": "^5.0.5",
     "sinon": "^17.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "@migration-script-runner/core": "^0.7.0",
     "@types/lodash": "^4.14.200",
-    "ascii-table3": "^0.9.0",
+    "ascii-table3": "^1.0.1",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4"
+    "moment": "^2.30.1"
   },
   "repository": {
     "type": "git",
